--- a/kheops.conf
+++ b/kheops.conf
@@ -11,7 +11,7 @@ limit_conn_zone $server_name zone=servers:10m;
 
 server {
 
-    listen 8080 http2;
+    listen 8080;
     server_name ${server_name};
 
     limit_conn servers 1000;
@@ -223,7 +223,7 @@ server {
 
       rewrite ^/(api/link/)([a-zA-Z0-9.+=_-]*)(.*)$ /api$3 break;
 
-      proxy_pass ${root_url};
+      proxy_pass http://localhost:8080;
     }
 
     location / {
