--- a/kheops.conf
+++ b/kheops.conf
@@ -258,7 +258,7 @@ server {
       proxy_set_header        X-Forwarded-Proto $scheme;
 
       add_header              Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
-      add_header              Content-Security-Policy "frame-ancestors 'none'; default-src 'none'; base-uri 'none'; script-src 'self' 'unsafe-eval'; child-src https://keycloak.kheops.online; connect-src 'self' https://keycloak.kheops.online; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; form-action 'self'; object-src 'none'" always;
+      add_header              Content-Security-Policy "frame-ancestors 'none'; default-src 'none'; base-uri 'none'; script-src 'self' 'unsafe-eval'; child-src ${keycloak_url}; connect-src 'self' ${keycloak_url}; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; form-action 'self'; object-src 'none'" always;
       add_header              X-Frame-Options "deny" always;
       add_header              X-XSS-Protection "1; mode=block" always;
       add_header              X-Content-Type-Options "nosniff" always;
