try out other proxypass

--- a/kheops.conf
+++ b/kheops.conf
@@ -204,7 +204,7 @@ server {
 
       rewrite ^/(api/link/)([a-zA-Z0-9.+=_-]*)(.*)$ /api$3 break;
 
-      proxy_pass ${root_url};
+      proxy_pass http://localhost;
     }
 
     location /api/testauthorizationproxy {
