--- a/kheops.conf
+++ b/kheops.conf
@@ -1,7 +1,16 @@
 server {
     listen 80 default_server;
     server_name _;
-    return 301 https://$host$request_uri;
+
+    location ^~ /.well-known/acme-challenge {
+        allow all;
+        default_type "text/plain";
+        alias /etc/nginx/acme-challenge;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 
