--- a/kheops.conf
+++ b/kheops.conf
@@ -204,7 +204,7 @@ server {
 
       rewrite ^/(api/link/)([a-zA-Z0-9.+=_-]*)(.*)$ /api$3 break;
 
-      proxy_pass ${root_url}:8042;
+      proxy_pass http://127.0.0.1:8042;
     }
 
     location /api/testauthorizationproxy {
