--- a/kheops.conf
+++ b/kheops.conf
@@ -160,6 +160,11 @@ server {
     location  /api/ohifservermetadata {
       return 491; #kheopsDICOMwebProxy
     }
+    
+    location /ohif {
+      proxy_pass          http://ohif:80;
+      proxy_redirect      http://ohif:80 ${root_url}; 
+    }
 
     location @kheopsAuthorization {
       proxy_set_header        Host $host;
