--- a/kheops.conf
+++ b/kheops.conf
@@ -165,6 +165,11 @@ server {
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
     }
+    
+    location = /app-config.js {
+      proxy_pass          http://ohif:80;
+      proxy_redirect      http://ohif:80 ${root_url}; 
+    }
 
     location @kheopsAuthorization {
       proxy_set_header        Host $host;
