--- a/kheops.conf
+++ b/kheops.conf
@@ -162,12 +162,7 @@ server {
     }
     
     location /ohif {
-      rewrite ^(.*)$ $1 break;
-      proxy_pass          http://ohif:80;
-      proxy_redirect      http://ohif:80 ${root_url}; 
-    }
-    
-    location = /app-config.js {
+      rewrite ^/ohif(.*)$ $1 break;
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
     }
