--- a/kheops.conf
+++ b/kheops.conf
@@ -161,11 +161,16 @@ server {
       return 491; #kheopsDICOMwebProxy
     }
     
-    location /ohif {
-      rewrite ^/ohif(.*)$ $1 break;
-      proxy_pass          http://ohif:80;
-      proxy_redirect      http://ohif:80 ${root_url}; 
-    }
+#    location /ohif {
+#      rewrite ^/ohif(.*)$ $1 break;
+#      proxy_pass          http://ohif:80;
+#      proxy_redirect      http://ohif:80 ${root_url}; 
+#    }
+     location /viewer {
+       rewrite ^/viewer(.*)$ $1 break;
+       proxy_pass          http://ohif:80;
+       proxy_redirect      http://ohif:80 ${root_url}; 
+     }
 
     location @kheopsAuthorization {
       proxy_set_header        Host $host;
