--- a/kheops.conf
+++ b/kheops.conf
@@ -165,6 +165,11 @@ server {
       rewrite ^/ohif(.*)$ $1 break;
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
+    }  
+    
+    location /viewer {
+      proxy_pass          http://ohif:80;
+      proxy_redirect      http://ohif:80 ${root_url}; 
     }   
 
     location @kheopsAuthorization {
