--- a/kheops.conf
+++ b/kheops.conf
@@ -167,10 +167,16 @@ server {
       proxy_redirect      http://ohif:80 ${root_url}; 
     }  
     
+    location /viewer/viewer {
+      rewrite ^/viewer(.*)$ $1 break;
+      proxy_pass          http://ohif:80;
+      proxy_redirect      http://ohif:80 ${root_url}; 
+    }
+    
     location /viewer {
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
-    }   
+    }     
 
     location @kheopsAuthorization {
       proxy_set_header        Host $host;
