--- a/kheops.conf
+++ b/kheops.conf
@@ -166,10 +166,10 @@ server {
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
     }      
-    location /viewer {
-      proxy_pass          http://ohif:80;
-      proxy_redirect      http://ohif:80 ${root_url}; 
-    }     
+#    location /viewer {
+#      proxy_pass          http://ohif:80;
+#      proxy_redirect      http://ohif:80 ${root_url}; 
+#    }     
 
     location @kheopsAuthorization {
       proxy_set_header        Host $host;
