--- a/kheops.conf
+++ b/kheops.conf
@@ -162,7 +162,7 @@ server {
     }
     
     location /ohif {
-      #rewrite ^/ohif(.*)$ $1 break;
+      rewrite ^/ohif(.*)$ $1 break;
       proxy_pass          http://ohif:80;
       proxy_redirect      http://ohif:80 ${root_url}; 
     }      
