--- a/kheops.conf
+++ b/kheops.conf
@@ -35,6 +35,23 @@ server {
     error_page 491 = @kheopsDICOMwebProxy;
     error_page 492 = @kheopsZipper;
 
+    location /wsi-viewer {
+    
+      rewrite ^/wsi-viewer(.*)$ $1 break;
+      proxy_pass http://wsiviewer:80;
+
+      proxy_set_header    Host               $host;
+      proxy_set_header    X-Real-IP          $remote_addr;
+      proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Host   $host;
+      proxy_set_header    X-Forwarded-Server $host;
+      proxy_set_header    X-Forwarded-Port   $server_port;
+      proxy_set_header    X-Forwarded-Proto  $scheme;
+      proxy_buffer_size          128k;
+      proxy_buffers              4 256k;
+      proxy_busy_buffers_size    256k;
+    }
+
     location /api {
       return 490; #kheopsAuthorization
     }
