--- a/kheops.conf
+++ b/kheops.conf
@@ -51,7 +51,7 @@ server {
       proxy_busy_buffers_size    256k;
     }
         
-    location /wsi-viewer {
+    location ~ ^/wsi-viewer/(/css/viewer?(_nav).css|/js/viewer?(-openseadragon-scalebar).js)$ {
       rewrite ^/wsi-viewer(.*)$ $1 break;
       proxy_pass http://wsiviewer:80;
 
