--- a/kheops.conf
+++ b/kheops.conf
@@ -35,7 +35,7 @@ server {
     error_page 491 = @kheopsDICOMwebProxy;
     error_page 492 = @kheopsZipper;
         
-    location ~ ^/wsi-viewer(/wsi-viewer|/css/viewer(_nav)?.css|/js/viewer(-openseadragon-scalebar)?.js)$ {
+    location ~ ^/wsi-viewer(/css/viewer(_nav)?.css|/js/viewer(-openseadragon-scalebar)?.js)?$ {
       rewrite ^/wsi-viewer(.*)$ $1 break;
       proxy_pass http://wsiviewer:80;
 
