--- a/kheops.conf
+++ b/kheops.conf
@@ -228,5 +228,5 @@ server {
 
       proxy_redirect      ${kheopsAuthorizationProxy_url} ${root_url};
     }
-    include location.conf;
+    include /etc/nginx/conf.d/location.conf;
 }
