--- a/kheops.conf
+++ b/kheops.conf
@@ -35,5 +35,5 @@ server {
     error_page 491 = @kheopsDICOMwebProxy;
     error_page 492 = @kheopsZipper;
 
-    include /etc/nginx/location.conf;
+    include /etc/nginx/locations.conf;
 }
