--- a/locations.conf
+++ b/locations.conf
@@ -1,3 +1,7 @@
+error_page 490 = @kheopsAuthorization;
+error_page 491 = @kheopsDICOMwebProxy;
+error_page 492 = @kheopsZipper;
+
 location /api {
     return 490; #kheopsAuthorization
 }
