--- a/insecure/Dockerfile
+++ b/insecure/Dockerfile
@@ -16,6 +16,8 @@ COPY nginxsize /etc/logrotate.d/nginxsize
 RUN rm /var/log/nginx/access.log /var/log/nginx/error.log && \
     rm /etc/nginx/conf.d/default.conf
     
+RUN chmod +x /logcrontab.sh
+    
 RUN apt-get update && apt-get install -y logrotate
 
 CMD ["nginx", "-g", "daemon off;"]
